<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.input.InputFragment">

    <include
        android:id="@+id/top_action_bar"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="161dp"
        android:layout_height="68dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/red_hat_display"
        android:text="@string/edit_this_form_below"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_action_bar" />

    <TextView
        android:id="@+id/asset_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/red_hat_display"
        android:text="Asset Name"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RelativeLayout
        android:id="@+id/inputAsset"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asset_name_title">

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAssetTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:helperTextTextAppearance="@font/red_hat_display"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/inputAssetEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form"
                android:drawablePadding="12dp"
                android:fontFamily="@font/red_hat_display"
                android:hint="@string/input_asset"
                android:maxLines="1"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/asset_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/red_hat_display"
        android:text="Status"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputAsset" />

    <RelativeLayout
        android:id="@+id/input_status_asset"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asset_status_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/status_input_asset"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:helperTextTextAppearance="@font/red_hat_display"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form"
                android:drawablePadding="12dp"
                android:fontFamily="@font/red_hat_display"
                android:hint="@string/select_status"
                android:maxLines="1"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/asset_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/red_hat_display"
        android:text="@string/location"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_status_asset" />

    <RelativeLayout
        android:id="@+id/input_location_asset"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asset_location_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_input_asset"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:helperTextTextAppearance="@font/red_hat_display"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form"
                android:drawablePadding="12dp"
                android:fontFamily="@font/red_hat_display"
                android:hint="@string/select_location"
                android:maxLines="1"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:background="@drawable/cancel_button"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_confirm"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/save_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>