<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="51dp"
            android:layout_height="33dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_small"
            android:translationZ="1dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:translationZ="1dp"/>

        <TextView
            android:id="@+id/login_instructions"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/login_instructions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:translationZ="1dp">

        </TextView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="415dp"
            android:layout_height="375dp"
            android:src="@drawable/login_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:helperTextTextAppearance="@font/red_hat_display"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="12dp"
                android:fontFamily="@font/red_hat_display"
                android:hint="Email"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:layout_marginTop="5dp"
            app:helperTextTextAppearance="@font/red_hat_display"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/soft_blue">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="12dp"
                android:fontFamily="@font/red_hat_display"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/red_hat_display"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

</androidx.constraintlayout.widget.ConstraintLayout>